Fix weird Safari text wrapping bug again.
Closes #237.

--- a/static/scss/components/_card.scss
+++ b/static/scss/components/_card.scss
@@ -8,7 +8,8 @@
         color: map-get($govuk-colours, black);
 
         &,
-        .c-card__name { flex-grow: 1; }
+        .c-card__name,
+        .c-card__name span { flex-grow: 1; }
 
         .c-card__name {
             display: flex;
